# zero2prod

./: .dockerignore  .env.priv.example  .env.pub  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.env.pub/: PGHOST
manage/: docker_build  psql  reset_db  run_tests  sqlx  tmux_warn  with_env
migrations/: 20220504165705_create_subscriptions_table.up.sql  20220513205756_add_status_to_subscriptions.down.sql  20220513205756_add_status_to_subscriptions.up.sql  20220514043416_create_subscription_tokens_table.down.sql  20220514043416_create_subscription_tokens_table.up.sql  20220517054637_add_job_queue.down.sql  20220517054637_add_job_queue.up.sql
src/: background_jobs.rs  config.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/background_jobs/: mod.rs  pg_queue.rs
src/cmd/: test_send_email.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health.rs  subscriptions.rs
src/telemetry/: mod.rs
templates/: hello.html
tests/: health.rs  health_test.rs  transaction_test.rs
tests/api/: health.rs  main.rs  subscribe.rs
tests/init_server/: mod.rs
tests/utils/: mod.rs
