[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.13", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
] }
env_logger = "0.9.0"
log = "0.4.17"
tracing-actix-web = "0.5"

[dev-dependencies]
reqwest = "0.11.10"
