[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.13", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
] }
uuid = { version = "1.0.0", features = ["v4"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"

[dev-dependencies]
reqwest = "0.11.10"
