[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[[bin]]
path = "src/cmd/test_send_email.rs"
name = "test_send_email"

[dependencies]
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.13", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "json",
] }
uuid = { version = "1.0.0", features = ["v4"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
once_cell = "1.10.0"
tracing-actix-web = "0.5.1"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.15.0"
lettre = "0.10.0-rc.6"
async-trait = "0.1.53"
tokio-stream = "0.1.8"
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"

# Latest realeased version (0.23.0) is not compatible with ActixWeb 4.
# See: https://github.com/lambda-fairy/maud/pull/331
[dependencies.maud]
git = "https://github.com/lambda-fairy/maud"
rev = "e6787cd62165a075c7f16a32f8bbacc398f52d13"
features = ["actix-web"]

[dev-dependencies]
reqwest = "0.11.10"
